2007-12-07  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	-- Add `trap' to clean temporary files.
	(CygbuildCmdInstallCheckMain): Fix status code assignment.
	(CygbuildCygcheckLibraryDepGrepPgkNames): Check
	missing cache file better.
	(CygbuildCmdGetSource): Now handles multiple patches
	in Cygwin Net release source packages. Detect *.cygport
	(CygbuildCmdConfAutomake): Simplify.
	(CygbuildCmdConfMain): Run `CygbuildCmdConfAutomake' inside
	.build, not $srcdir.
	(CygbuildCmdPkgDevelStandard): Improve manual page search.
	Add color support. Add bin package support
	(CygbuildCmdPackageBinMain): New
	(CygbuildCmdPackageDevMain): New
	(WasLibraryInstall): New
	(CygbuildCommandMain): Change indentation level in for-command loop.

2007-12-05  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh
	(CygbuildInstallPackageDocs): Fix --test more behavior. Do not
	run the tar command.
	(CygbuildInstallExtraBinFiles): New. Treat CYGWIN-PATCHES/bin
	(CygbuildCmdInstallCheckMakefiles): New. Try to detect use of
	static libraries.
	(CygbuildConfCC): Warn about static library linking during
	./configure
	(CygbuildReadmeReleaseMatchCheck): Use relative path in message
	(CygbuildCmdInstallCheckSetupHintMain): Broke long function
	into pieces. Now also uses `CygbuildMsgFilter' everywhere to
	display colored errors.
	(CygbuildCmdInstallCheckSetupHintCategory): New. Improve
	Perl and Python checks.
	(CygbuildCmdInstallCheckSetupHintDependExists): New (split).
	Chnage [OK] to plain OK.
	(CygbuildCmdInstallCheckSetupHintLdesc): New (split)
	(CygbuildCmdInstallCheckSetupHintSdesc): New (split)
	(CygbuildCmdInstallCheckSetupHintFields): Completely new.
	(CygbuildMsgFilter): Do not print() if there is no output.
	Remove `unset' and add `local' declarations.
	(CygbuildCmdInstallCheckDirEmpty): Add [0-9] to detect all
	numeric content.

2007-12-03  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl (BinPkgListing): Add support for *.gz
	tar file.